# OnkoDICOMSegDemo

./: .gitignore  AutoSegment.py  PathHandler.py  StyleSheetReader.py  auto_segment_tab.py  auto_segmentation.py  auto_segmentation_controller.py  auto_segmentation_ui.py  convert_nifti_to_dicom.py  dicom_viewer_tab.py  ignore_files_in_dir.py  main.py  multithread.py  nifti_converter.py  nifti_converter_ui.py  pyproject.toml  readme.md  redirect_stdout.py  rtstruct_loader.py  simple_matplot_viewer.py
Demo/: ct.0.dcm  ct.1.dcm  ct.10.dcm  ct.100.dcm  ct.101.dcm  ct.102.dcm  ct.103.dcm  ct.104.dcm  ct.105.dcm  ct.106.dcm  ct.107.dcm  ct.108.dcm  ct.109.dcm  ct.11.dcm  ct.110.dcm  ct.111.dcm  ct.112.dcm  ct.113.dcm  ct.114.dcm  ct.115.dcm  ct.116.dcm  ct.117.dcm  ct.12.dcm  ct.13.dcm  ct.14.dcm  ct.15.dcm  ct.16.dcm  ct.17.dcm  ct.18.dcm  ct.19.dcm  ct.2.dcm  ct.20.dcm  ct.21.dcm  ct.22.dcm  ct.23.dcm  ct.24.dcm  ct.25.dcm  ct.26.dcm  ct.27.dcm  ct.28.dcm  (+78 more)
