[project]
name = "onkodicomsegdemo"
version = "0.1.0"
description = "Basic demo of TotalSegmentator API"
authors = [
    {name = "Tim Glasgow"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "acvl-utils (>=0.2.5,<0.3.0)",
    "pydicom (==3.0)",
    "platipy (>=0.7.2,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
