[tool.poetry]
name = "onkodicomsegdemo"
version = "0.1.0"
description = "Basic demo of TotalSegmentator API"
authors = [
    "Tim Glasgow",
    "Matt Carlile"
]
readme = "README.md"

[poetry.virtualenvs]
create = true
in-project = true

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyside6 = ">=6.4.0, <6.9"
acvl-utils = ">=0.2.5,<0.3.0"
pydicom = "3.0"
platipy = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
